<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".gameActivities.MemoryTrainingActivity">

    <ImageView
        android:id="@+id/img_logo_main"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/design_for_item"
        android:padding="7dp"
        android:paddingHorizontal="12dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/txt_v_count_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/img_btn_back_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/anim_click_for_back"
        android:clickable="true"
        android:focusable="true"
        android:state_pressed="true"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_logo_main" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:columnWidth="100dp"
        android:focusable="true"
        android:gravity="center"
        android:horizontalSpacing="6dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="6dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_v_explain_memory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_main"
        tools:listitem="@android:layout/simple_list_item_1" />

    <TextView
        android:id="@+id/txt_v_the_end_memory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/end_question"
        android:textColor="@color/bg_for_question_pb"
        android:textSize="40sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/txt_v_explain_memory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_main" />

    <TextView
        android:id="@+id/txt_v_explain_memory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:text="@string/main_memory_txt"
        android:textColor="@color/bg_for_question_pb"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_v_save_memory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_v_save_memory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_for_group"
        android:gravity="center"
        android:text="@string/save_txt"
        android:textAllCaps="true"
        android:textColor="@color/bg_for_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_v_animation_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:textColor="@color/bg_for_question_pb"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>